--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "sink"
 main = "dist/server/index.mjs"
-compatibility_date = "2025-09-15"
+pages_build_output_dir = "dist"
+compatibility_date = "2025-11-03"
 compatibility_flags = ["nodejs_compat"]
 keep_vars = true
 upload_source_maps = true
